# laffybot

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  AUDIT_REPORT.md  README.md  config.example.json  dev.bat  dev.py  dev.sh  nuitka-build.py  plan-package.md  plan.md  pyproject.toml
docs/: agent-runner-streaming-design.md  api.md  auto-title-design.md  context-builder-design.md  heartbeat-design.md  memory-system-impl-roadmap.md  provider-model-design.md  rag-mcp-server-design.md  readme-document-content-guidelines.md  session-manager-design.md  session-manager-sqlite-impl.md  session-manager.md  session-model-decoupling.md  ui-design-spec.md  ui-design.md  ui-tech-selection.md
docs/archive/: agent-runtime-package-2026-05-21.md  agent-runtime-test-complete-2026-05-21.md  agent-tool-timeout-ui-fixes-2026-05-17.md  architecture-audit-fix-all-phases-2026-05-17.md  architecture-refactor-2026-05-22.md  architecture-refactor-phase1-6-2026-05-22.md  architecture-remediation-plan-2026-05-19.md  archive-ui-autoarchive-unarchive-2026-05-16.md  consolidation-model-ui-2026-05-17.md  context-compression-2026-05-16.md  lazy-session-timeout-header-model-segments-2026-05-17.md  mcp-disconnect-tool-cleanup-2026-05-20.md  mcp-integration-2026-05-19.md  memory-consolidation-agent-2026-05-17.md  memory-extraction-timing-fix-2026-05-16.md  merge-active-archived-sessions-2026-05-17.md  phase2-continue-memory-injection-fix-2026-05-16.md  rag-mcp-server-async-2026-05-21.md  rag-mcp-server-design-2026-05-21.md  skill-system-2026-05-19.md  ui-streaming-data-model-rework-2026-05-20.md
docs/fixes/: provider-model-config.md
docs/ui/: desktop-design.md  tauri-impl-plan.md  ui-api-interface.md  ui-design-spec.md  ui-design.md  ui-tech-selection.md
laffybot/: __init__.py  __main__.py  config.py  crypto.py  logging.py
laffybot/agent/: __init__.py  events.py  heartbeat.py  runner.py  title_generator.py
laffybot/agent/skills/: __init__.py  errors.py  loader.py  models.py  registry.py
laffybot/agent/tools/: __init__.py  base.py  file_state.py  filesystem.py  registry.py  schema.py  shell.py  skill_view.py
laffybot/agent_runtime/: heartbeat.py  runner.py
laffybot/agent_runtime/providers/: __init__.py  base.py  openai.py
laffybot/agent_runtime/skills/: __init__.py  loader.py
laffybot/agent_runtime/tools/: __init__.py  errors.py  filesystem.py  registry.py  shell.py  skill_view.py  workspace.py
laffybot/api/: __init__.py  app.py  dependencies.py  errors.py  event_bus.py  health_routes.py  mcp_routes.py  provider_routes.py  router.py  routes.py  schemas.py  session_routes.py  skill_routes.py  sse_adapter.py  tool_routes.py
laffybot/api/routes/: __init__.py  health.py  logs.py  mcp.py  providers.py  sessions.py  skills.py  tools.py
laffybot/context/: __init__.py  base.py  builder.py  compressor.py  templates.py  types.py
laffybot/db/: app_setting_store.py  base.py  consolidated_store.py  errors.py  manager.py  mcp_server_store.py  memory_store.py  models.py  provider_store.py  session_store.py
laffybot/eventbus/: bus.py  protocol.py  types.py
laffybot/memory/: __init__.py  config.py  consolidated_store.py  consolidator.py  exceptions.py  extractor.py  manager.py  prompts.py  storage.py  store.py
laffybot/observability/: health.py  logging.py  metrics.py  tracing.py
laffybot/providers/: __init__.py  base.py  config.py  errors.py  factory.py  openai.py  types.py
laffybot/service/: __init__.py  async_events.py  error_log.py  errors.py  local_lock_port.py  lock_port.py  message_accumulator.py  models.py  protocols.py  provider_factory.py  ring_buffer.py  session_manager.py  state_machine.py  title_generator.py
laffybot/service/context/: __init__.py  base.py  builder.py  compressor.py  templates.py  tokens.py  types.py
laffybot/session/: __init__.py  app_setting_store.py  errors.py  interfaces.py  manager.py  mcp_server_store.py  models.py  provider_store.py  store.py
laffybot/utils/: __init__.py  token_counter.py
rag-mcp-server/: pyproject.toml
rag-mcp-server/config/: settings.yaml
rag-mcp-server/rag_mcp_server/: config.py  embeddings.py  file_watcher.py  workflow.py
tests/agent/: test_cancellation.py  test_registry.py
tests/agent_runtime/: conftest.py  test_events.py  test_heartbeat.py  test_runner.py  test_shell.py
tests/agent_runtime/agent/: test_cancellation.py  test_registry.py
tests/agent_runtime/providers/: test_base.py  test_config.py  test_errors.py  test_factory.py  test_openai.py  test_types.py
tests/agent_runtime/skills/: test_errors.py  test_loader.py  test_registry.py
tests/agent_runtime/tools/: test_base.py  test_file_state.py  test_filesystem.py  test_skill_view.py
tests/context/: test_tokens.py
tests/providers/: test_types.py
tests/session/: test_session_manager.py  test_store.py
ui/: .gitignore  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  index.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs  main.rs  sidecar.rs
ui/src/hooks/: use-error-logs.ts  use-global-events.ts  use-mcp-servers.ts  use-memories.ts  use-providers.ts  use-sessions.ts  use-skills.ts  use-update-session-title.ts  useKeyboardShortcuts.ts  useSseStream.ts
ui/src/lib/: abort-manager.ts  api.ts  sse.ts
ui/src/pages/: AdvancedSettingsPage.tsx  ChatPage.tsx  ErrorLogPage.tsx  McpSettingsPage.tsx  MemoryManagePage.tsx  SettingsPage.tsx  (+3 more)
(+43 files in other folders)
