[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv.workspace]
members = ["packages/*"]

[project]
name = "laffybot-ai"
version = "0.1.0"
description = "Add your description here"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
dependencies = [
    "laffybot-agent-runtime >= 0.1.0",
    "loguru",
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "openai",
    "httpx",
    "httpx_sse",
    "json-repair",
    "aiosqlite",
    "jinja2",
    "cryptography",
]

[tool.uv.sources]
laffybot-agent-runtime = { workspace = true }

[project.scripts]
laffybot = "laffybot.__main__:main"

[tool.setuptools.packages.find]
include = ["laffybot*"]

[project.optional-dependencies]

dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "aiohttp",
    "mypy",
    "psutil",
    "types-psutil",
    "nuitka",
]

[dependency-groups]
dev = [
    "respx>=0.23.1",
]

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true

[tool.ruff]
exclude = ["third-party"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["laffybot"]
omit = ["tests/*", "**/tests/*"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["third-party/"]
mypy_path = ["packages/laffybot-agent-runtime/src"]

[[tool.mypy.overrides]]
module = "tests.*"
strict = false
