[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laffybot-ai"
version = "0.1.0"
description = "Add your description here"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
dependencies = [
    "loguru",
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "openai",
    "httpx",
    "httpx_sse",
    "json-repair",
    "aiosqlite",
    "jinja2",
    "cryptography",
]

[project.scripts]
laffybot = "laffybot.__main__:main"

[tool.setuptools.packages.find]
include = ["laffybot*"]

[project.optional-dependencies]

dev = [
    "respx>=0.23.1",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "aiohttp",
    "mypy",
    "psutil",
    "types-psutil",
    "nuitka",
]

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true

[tool.ruff]
exclude = ["third-party"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["laffybot"]
omit = ["tests/*", "**/tests/*"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["third-party/"]
# mypy_path is no longer needed; agent_runtime is now under laffybot/

[[tool.mypy.overrides]]
module = "tests.*"
strict = false

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]
